3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/loader.l: Prevent excess whitespace while saving objects.
common/loader.c: Rebuilt.
Andreas Kirschbaum 2006-02-27

Apply patch by Marc Alexander Lehmann to improve server performance.
---
include/map.h: Move path field to end of struct. Since this field was huge it
   pushed all other fields to large offsets in the struct. Moving it to the
   end of the struct mapdef should not break anything but will improve
   performance and reduce the server code by >3500 bytes.
Andreas Kirschbaum 2006-02-27

------------------------------------------------------------------------------
Changes for 1.9.0:

lib/collect.pl.in: Again fix generation of 'editor_folder' field to make
   sub-folder selection work again.
lib/archetypes: Rebuilt.
Andreas Kirschbaum 2006-02-26

*/Makefile{in.am}: Fix plugin makefiles so that 'make distcheck' works.  Using
  relative path names for files to include in distribution does not work -
  need to have a makefile in each directory.
configure{.ac}: Updated as result of new Makefiles.
MSW 2006-02-24

Apply patch #1428057 courtesy Pippijn van Steenhoven: fix to a crashing bug in plugins
(incoherent order of parameters).
Also use plugin_common.h in CFAnim instead of having separate definitions.
Modified files:
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/plugin_common.c
 plugins/common/include/plugin_common.h
Ryo 2006-02-23

Remove object type CONFUSION since it was not used anymore.
---
common/item.c: Remove CONFUSION entry from item_types[] array.
include/define.h: Uncomment #define CONFUSION.
Andreas Kirschbaum 2006-02-22
